--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               </div>   
           </div>
       </div>
-       
+       </div>
     </div><!-- row moreCourses -->
 </div><!-- main container -->
 
@@ -400,7 +400,7 @@
 
             <div class="col-sm-2">
               <h6>Navigation</h6>
-              <ul>
+              <ul class="unstyled">
                   <li><a href="#">Home</a></li>
                   <li><a href="#">Services</a></li>
                   <li><a href="#">Links</a></li>
@@ -410,7 +410,7 @@
 
             <div class="col-sm-2">
               <h6>Follow Us</h6>
-              <ul>
+              <ul class="unstyled">
                   <li><a href="#">Twitter</a></li>
                   <li><a href="#">Facebook</a></li>
                   <li><a href="#">Google Plus</a></li>
@@ -421,7 +421,10 @@
               <h6>Coded with <span class="glyphicon glyphicon-heart"><br />by Gerry Leonard</span></h6>
              </div>
 
-      </div>
+          </div><!-- row -->
+
+      </div><!-- container -->
+
  
   </footer>
         <!-- First try for the online version of jQuery-->
