--- a/index.html
+++ b/index.html
@@ -348,11 +348,10 @@
 
       <hr>
            
-  
 
     <div class="row" id="moreCourses">
       <div class="col-12">
-          <h3>Learn more about Web Design</h3>
+          <h3>Learn about Web Design</h3>
           <div class="thumbnails row">
               <div class="col-6">
                 <div class="thumbnail">
